@@ -1,5 +1,6 @@
 7.x-1.13.6
 ----------
+ - #2035 Change 'Datasets' field on Resources form to use autocomplete.
  - #2034 Added language selectors on 'chosen_jquery_selector' configuration.
  - #2018 Additional test/devops improvements needed for deployment. See #2012, #2014, #2015 and #2016 for specifics.
 
